<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    tools:context=".RegisterActivity">

    <LinearLayout
        style="@style/linear_layout"
        android:paddingVertical="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="Register Here"
            android:textColor="#222"
            android:textSize="40dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/reg_name"
            style="@style/edit_text"
            android:ems="10"
            android:hint="Name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/reg_username"
            style="@style/edit_text"
            android:ems="10"
            android:hint="Username" />

        <EditText
            android:id="@+id/reg_email"
            style="@style/edit_text"
            android:ems="16"
            android:hint="Email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/reg_phone"
            style="@style/edit_text"
            android:ems="10"
            android:hint="Phone Number"
            android:inputType="phone" />


        <EditText
            android:id="@+id/reg_password"
            style="@style/edit_text"
            android:ems="10"
            android:hint="Password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/reg_con_password"
            style="@style/edit_text"
            android:ems="10"
            android:hint="Confirm Password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/reg_submit"
            style="@style/s_button"
            android:text="Register" />
    </LinearLayout>
</ScrollView>
